--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous" />
     <link href="css/style.css" rel="stylesheet" />
     <script src="https://kit.fontawesome.com/0d01b7ac7e.js" crossorigin="anonymous"></script>
-    <title>Portofolio Alfan Rozak</title>
+    <title>Alfan Rozak | Portfolio</title>
     <style>
       body.dark-mode {
         background-color: #121212;
@@ -22,13 +22,17 @@
         from { opacity: 0; transform: translateY(20px); }
         to { opacity: 1; transform: translateY(0); }
       }
+      .highlight-name:hover {
+        color: #dc3545;
+        transition: all 0.3s ease-in-out;
+      }
     </style>
   </head>
   <body class="fade-in">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark shadow-sm fixed-top">
       <div class="container">
         <a class="navbar-brand" href="#">
-          <div class="align-items-center fw-bolder fst-italic">MY <span class="text-danger">PORTOFOLIO</span></div>
+          <div class="align-items-center fw-bolder fst-italic">ALFAN <span class="text-danger">ROZAK</span></div>
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -37,15 +41,18 @@
           <div class="navbar-nav ms-auto">
             <a class="nav-link active" href="#">Home</a>
             <a class="nav-link" href="#about">About</a>
+            <a class="nav-link" href="#product">Products</a>
             <a class="nav-link" href="#contact">Contact</a>
+            <button class="btn btn-outline-light btn-sm ms-3" onclick="toggleDarkMode()">🌙</button>
+          </div>
         </div>
       </div>
     </nav>
 
     <section class="jumbotron text-center" id="jumbotron">
-      <img class="rounded-circle img-thumbnail" src="img/alfan.jpg" alt="Alfan Rozak" width="200" height="200" />
-      <div class="fw-bolder fs-2 fst-italic">ALFAN<span class="text-danger"> ROZAK</span></div>
-      <p class="lead">Programmer | UI/UX Enthusiast | Tech Explorer</p>
+      <img class="rounded-circle img-thumbnail" src="img/alfan.png" alt="Alfan Rozak" width="200" height="200" />
+      <div class="fw-bolder fs-2 fst-italic highlight-name">ALFAN <span class="text-danger">ROZAK</span></div>
+      <p class="lead">Self-Taught Programmer | UI/UX Learner | Digital Explorer</p>
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
         <path fill="#212529" fill-opacity="1" d="M0,128L60,117.3C120,107,240,85,360,69.3C480,53,600,43,720,80C840,117,960,203,1080,208C1200,213,1320,139,1380,101.3L1440,64L1440,320L1380,320C1320,320,1200,320,1080,320C960,320,840,320,720,320C600,320,480,320,360,320C240,320,120,320,60,320L0,320Z"></path>
       </svg>
@@ -61,17 +68,17 @@
         </div>
         <div class="row justify-content-center fs-5 text-center">
           <div class="col-sm-10">
-            <p>  Halo! Saya <strong>Alfan Rozak</strong>, seorang pembelajar mandiri dan penggiat dunia digital yang sangat antusias dengan teknologi. Meski saya belum memiliki pengalaman profesional di bidang coding, saya terus belajar setiap hari dengan semangat tinggi dan rasa ingin tahu yang besar.</p>
-            <p>Ketertarikan saya pada dunia pemrograman, UI/UX, dan teknologi web dimulai dari pengalaman membangun bisnis digital sejak tahun 2003. Kini, saya sedang fokus mempelajari HTML, CSS, JavaScript, serta tools seperti Bootstrap dan Android Studio. Target saya sederhana: menjadi developer yang tidak hanya bisa ngoding, tapi juga menciptakan solusi nyata.</p>
-            <p>Saya percaya bahwa proses belajar adalah perjalanan yang luar biasa. Saya suka eksplorasi, suka trial-and-error, dan tidak takut gagal — karena saya yakin, dari situ saya tumbuh. Jika kamu juga penggiat teknologi, atau punya proyek menarik, saya sangat terbuka untuk ngobrol dan bertukar ide.</p>
+            <p>Halo! Saya <strong>Alfan Rozak</strong>, seorang pembelajar mandiri yang sangat antusias di dunia digital dan teknologi. Meskipun saya belum memiliki pengalaman profesional sebagai programmer, saya terus belajar secara konsisten dengan semangat tinggi dan rasa ingin tahu yang besar.</p>
+            <p>Ketertarikan saya pada dunia pemrograman, UI/UX, dan teknologi web berawal dari pengalaman membangun bisnis digital sejak 2003. Saat ini saya sedang fokus mempelajari HTML, CSS, JavaScript, serta tools seperti Bootstrap dan Android Studio.</p>
+            <p>Target saya sederhana: menjadi developer yang bukan hanya bisa menulis kode, tapi mampu menciptakan solusi nyata untuk masalah di dunia digital. Saya juga terbuka untuk kolaborasi dan berbagi ilmu, baik melalui proyek maupun diskusi.</p>
+            <p>Yuk ngobrol bareng! Hubungi saya lewat <a href="https://t.me/blinks_id" target="_blank">@blinks_id</a>.</p>
           </div>
+        </div>
       </div>
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
         <path fill="#ffffff" fill-opacity="1" d="M0,128L60,106.7C120,85,240,43,360,53.3C480,64,600,128,720,160C840,192,960,192,1080,192C1200,192,1320,192,1380,192L1440,192L1440,320L1380,320C1320,320,1200,320,1080,320C960,320,840,320,720,320C600,320,480,320,360,320C240,320,120,320,60,320L0,320Z"></path>
       </svg>
     </section>
-
-    <!-- Produk & Kontak tetap -->
 
     <section class="contact" id="contact">
       <div class="container">
@@ -99,7 +106,7 @@
               <button type="submit" class="btn btn-danger mb-5">Send</button>
             </form>
             <div class="text-center">
-              <p class="mt-3">Atau hubungi saya melalui: <br>
+              <p class="mt-3">Atau hubungi saya melalui:<br>
                 <a href="https://t.me/blinks_id" target="_blank" class="btn btn-outline-primary btn-sm mt-2">
                   <i class="fab fa-telegram"></i> @blinks_id
                 </a>
@@ -111,7 +118,7 @@
     </section>
 
     <footer class="bg-dark text-center">
-      <p class="text-white">Created by <i class="fa-solid fa-heart text-danger"></i> <a class="text-white fw-bold" href="#">Alfan Rozak</a></p>
+      <p class="text-white">Created with <i class="fa-solid fa-heart text-danger"></i> by <span class="fw-bold">Alfan Rozak</span></p>
     </footer>
 
     <script>
