--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark shadow-sm fixed-top">
       <div class="container">
         <a class="navbar-brand" href="#">
-          <div class="align-items-center fw-bolder fst-italic">ALFAN <span class="text-danger">ROZAK</span></div>
+          <div class="align-items-center fw-bolder fst-italic">MY <span class="text-danger">PORTFOLIO</span></div>
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -43,14 +43,13 @@
             <a class="nav-link" href="#about">About</a>
             <a class="nav-link" href="#product">Products</a>
             <a class="nav-link" href="#contact">Contact</a>
-            <button class="btn btn-outline-light btn-sm ms-3" onclick="toggleDarkMode()">🌙</button>
           </div>
         </div>
       </div>
     </nav>
 
     <section class="jumbotron text-center" id="jumbotron">
-      <img class="rounded-circle img-thumbnail" src="img/alfan.png" alt="Alfan Rozak" width="200" height="200" />
+      <img class="rounded-circle img-thumbnail" src="img/alfan.jpg" alt="Alfan Rozak" width="200" height="200" />
       <div class="fw-bolder fs-2 fst-italic highlight-name">ALFAN <span class="text-danger">ROZAK</span></div>
       <p class="lead">Self-Taught Programmer | UI/UX Learner | Digital Explorer</p>
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
@@ -121,11 +120,6 @@
       <p class="text-white">Created with <i class="fa-solid fa-heart text-danger"></i> by <span class="fw-bold">Alfan Rozak</span></p>
     </footer>
 
-    <script>
-      function toggleDarkMode() {
-        document.body.classList.toggle('dark-mode');
-      }
-    </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
   </body>
 </html>
